# SV

./: .gitignore  README.md  build.sh  notes.txt
.cache/clangd/index/: main.c.E2A6DDA6F1BBF61B.idx
include/: helper_cuda.h
src/: CMakeLists.txt  GSPC19280104-20230929.txt  SV.c  datesGSPC.txt  main.c  main.cu  main.h  sv
test/: SV-T1N1000_out.txt  SV-T24050N1000_out.txt  SV-file  lambda  lambda.pub  output.ncu-rep  څVUUU
